// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel plugin should find all the types of Components 1`] = `
<div>
  <ClassComponent>
    <div
      data-tid="9d16a7de"
    />
  </ClassComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 2`] = `
<div>
  <ArrowFunctionalComponent>
    <div
      data-tid="7826a6"
    />
  </ArrowFunctionalComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 3`] = `
<div>
  <FunctionalComponent>
    <p
      data-tid="1b1a9b1f"
    />
  </FunctionalComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 4`] = `
<div>
  <ComposedComponent>
    <Button
      data-tid="f909cc1c"
      data-tid-prop="f909cc1c"
    >
      <button
        data-tid="cc393c49 f909cc1c"
        data-tid-prop="f909cc1c"
      />
    </Button>
  </ComposedComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 5`] = `
<div>
  <ComponentWithAttrs>
    <div
      data-test="testme"
      data-tid="7cb847d2"
    />
  </ComponentWithAttrs>
</div>
`;

exports[`babel plugin should find all the types of Components 6`] = `
<div>
  <DefaultClass>
    <div
      data-tid="f328c28"
    />
  </DefaultClass>
</div>
`;

exports[`babel plugin should find all the types of Components 7`] = `
<div>
  <DefaultClass>
    <div
      data-tid="942bdffa"
    />
  </DefaultClass>
</div>
`;

exports[`babel plugin should find all the types of Components 8`] = `
<div>
  <SpreadPropsComponent>
    <div
      data-disabled={true}
      data-tid="d2e56e0f"
    />
  </SpreadPropsComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 9`] = `
<div>
  <WrappedElements>
    <div
      data-tid="bdc82042"
    />
  </WrappedElements>
</div>
`;

exports[`babel plugin should find all the types of Components 10`] = `
<div>
  <CustomElement>
    <div
      data-tid="16efc867"
      data-tid-prop="16efc867"
    />
  </CustomElement>
</div>
`;

exports[`babel plugin should find all the types of Components 11`] = `
<div>
  <ForwardRef>
    <div
      data-tid="95f380fa"
    />
  </ForwardRef>
</div>
`;

exports[`babel plugin should find nested Component 1`] = `
<ClassComponent>
  <div
    data-tid="9d16a7de"
  >
    <ArrowFunctionalComponent>
      <div
        data-tid="7826a6"
      >
        <FunctionalComponent>
          <p
            data-tid="1b1a9b1f"
          >
            <ComposedComponent>
              <Button
                data-tid="f909cc1c"
                data-tid-prop="f909cc1c"
              >
                <button
                  data-tid="cc393c49 f909cc1c"
                  data-tid-prop="f909cc1c"
                />
              </Button>
            </ComposedComponent>
          </p>
        </FunctionalComponent>
      </div>
    </ArrowFunctionalComponent>
  </div>
</ClassComponent>
`;

exports[`babel plugin should find wrapped component 1`] = `
<ComposedComponent2>
  <ComposedComponent
    data-tid="20ca140e"
    data-tid-prop="20ca140e"
  >
    <Button
      data-tid="f909cc1c 20ca140e"
      data-tid-prop="f909cc1c 20ca140e"
    >
      <button
        data-tid="cc393c49 f909cc1c 20ca140e"
        data-tid-prop="f909cc1c 20ca140e"
      >
        <div>
          test text
        </div>
      </button>
    </Button>
  </ComposedComponent>
</ComposedComponent2>
`;

exports[`babel plugin should pass props through the React.Fragment 1`] = `
"/*__reselector__start__::{\\"A\\":{\\"data-tid\\":\\"64afcda1\\"},\\"B\\":{\\"data-tid\\":\\"18fc102\\"}}::__reselector__end__*/
\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.B = exports.A = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

const A = __props__ => _react.default.createElement(_react.default.Fragment, null, _react.default.createElement(\\"div\\", {
  \\"data-tid\\": \\"64afcda1\\" + (__props__ && __props__['data-tid-prop'] ? ' ' + __props__['data-tid-prop'] : '')
}));

exports.A = A;
A[\\"data-tid\\"] = \\"64afcda1\\";

const B = __props__ => _react.default.createElement(_react.Fragment, null, _react.default.createElement(\\"div\\", {
  \\"data-tid\\": \\"18fc102\\" + (__props__ && __props__['data-tid-prop'] ? ' ' + __props__['data-tid-prop'] : '')
}));

exports.B = B;
B[\\"data-tid\\"] = \\"18fc102\\";"
`;

exports[`babel plugin should pass props through the React.Fragment 2`] = `
<A>
  <div
    data-tid="64afcda1"
  />
</A>
`;

exports[`babel plugin should pass props through the React.Fragment 3`] = `
<B>
  <div
    data-tid="18fc102"
  />
</B>
`;

exports[`babel plugin should save Component\`s root attrs 1`] = `
<ComponentWithAttrs>
  <div
    data-test="testme"
    data-tid="7cb847d2"
  />
</ComponentWithAttrs>
`;

exports[`babel plugin should save Component\`s root attrs 2`] = `
DOMStringMap {
  "test": "testme",
  "tid": "7cb847d2",
}
`;

exports[`babel plugin transform should transform conditionals functions 1`] = `
"/*__reselector__start__::{\\"ternaryRender\\":{\\"data-tid\\":\\"69b7be24\\"},\\"conditionalRender\\":{\\"data-tid\\":\\"889264dd\\"},\\"ifRender\\":{\\"data-tid\\":\\"592bdf8c\\"}}::__reselector__end__*/
\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.ifRender = exports.conditionalRender = exports.ternaryRender = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

/* eslint-disable-next-line no-unused-vars */
const ternaryRender = ({
  children,
  flag,
  'data-tid-prop': __dataprop__
}) => flag ? _react.default.createElement(\\"div\\", {
  \\"data-tid\\": \\"69b7be24\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children) : _react.default.createElement(\\"a\\", {
  \\"data-tid\\": \\"69b7be24\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children);
/* eslint-disable-next-line no-unused-vars */


exports.ternaryRender = ternaryRender;
ternaryRender[\\"data-tid\\"] = \\"69b7be24\\";

const conditionalRender = ({
  children,
  flag,
  'data-tid-prop': __dataprop__
}) => flag && _react.default.createElement(\\"div\\", {
  \\"data-tid\\": \\"889264dd\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children);
/* eslint-disable-next-line no-unused-vars */


exports.conditionalRender = conditionalRender;
conditionalRender[\\"data-tid\\"] = \\"889264dd\\";

const ifRender = ({
  children,
  flag,
  'data-tid-prop': __dataprop__
}) => {
  if (flag) {
    return _react.default.createElement(\\"div\\", {
      \\"data-tid\\": \\"592bdf8c\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
    }, children);
  }

  return null;
};

exports.ifRender = ifRender;
ifRender[\\"data-tid\\"] = \\"592bdf8c\\";"
`;

exports[`babel plugin transform should transform declared named class in default 1`] = `
"/*__reselector__start__::{\\"DefaultClass\\":{\\"data-tid\\":\\"942bdffa\\"}}::__reselector__end__*/
\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

// eslint-disable-next-line
class DefaultClass extends _react.Component {
  render() {
    return _react.default.createElement(\\"div\\", {
      \\"data-tid\\": \\"942bdffa\\" + (this.props && this.props['data-tid-prop'] ? ' ' + this.props['data-tid-prop'] : '')
    }, this.props.children);
  }

}

DefaultClass[\\"data-tid\\"] = \\"942bdffa\\";
var _default = DefaultClass;
exports.default = _default;"
`;

exports[`babel plugin transform should transform default anonymous function 1`] = `
"/*__reselector__start__::{\\"default\\":{\\"data-tid\\":\\"e454b9b4\\"}}::__reselector__end__*/
\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = _default;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function _default({
  children,
  'data-tid-prop': __dataprop__
}) {
  return _react.default.createElement(\\"div\\", {
    \\"data-tid\\": \\"e454b9b4\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
  }, children);
}

if (module.exports) {
  module.exports.default[\\"data-tid\\"] = \\"e454b9b4\\";
}"
`;

exports[`babel plugin transform should transform default named class 1`] = `
"/*__reselector__start__::{\\"default\\":{\\"data-tid\\":\\"f328c28\\"},\\"DefaultClass\\":{\\"data-tid\\":\\"f328c28\\"}}::__reselector__end__*/
\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

// eslint-disable-next-line
class DefaultClass extends _react.Component {
  render() {
    return _react.default.createElement(\\"div\\", {
      \\"data-tid\\": \\"f328c28\\" + (this.props && this.props['data-tid-prop'] ? ' ' + this.props['data-tid-prop'] : '')
    }, this.props.children);
  }

}

exports.default = DefaultClass;

if (module.exports) {
  module.exports.default[\\"data-tid\\"] = \\"f328c28\\";
}"
`;

exports[`babel plugin transform should transform default named function 1`] = `
"/*__reselector__start__::{\\"default\\":{\\"data-tid\\":\\"ae82fa24\\"},\\"NamedFunc\\":{\\"data-tid\\":\\"ae82fa24\\"}}::__reselector__end__*/
\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = NamedFunc;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function NamedFunc({
  children,
  'data-tid-prop': __dataprop__
}) {
  return _react.default.createElement(\\"div\\", {
    \\"data-tid\\": \\"ae82fa24\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
  }, children);
}

if (module.exports) {
  module.exports.default[\\"data-tid\\"] = \\"ae82fa24\\";
}"
`;

exports[`babel plugin transform should transform forwardRef right 1`] = `
"/*__reselector__start__::{\\"withRef\\":{\\"data-tid\\":\\"a079efd7\\"},\\"RefComponent\\":{\\"data-tid\\":\\"95f380fa\\"}}::__reselector__end__*/
\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = exports.withRef = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

const withRef = Base => _react.default.forwardRef((props, ref) => _react.default.createElement(Base, _extends({}, Object.assign({}, props, {
  innerRef: ref
}), {
  \\"data-tid\\": \\"a079efd7\\" + (props && props['data-tid-prop'] ? ' ' + props['data-tid-prop'] : ''),
  \\"data-tid-prop\\": \\"a079efd7\\" + (props && props['data-tid-prop'] ? ' ' + props['data-tid-prop'] : '')
})));

exports.withRef = withRef;
withRef[\\"data-tid\\"] = \\"a079efd7\\";

const RefComponent = _react.default.forwardRef((props, ref) => _react.default.createElement(\\"div\\", _extends({}, Object.assign({}, props, {
  ref: ref
}), {
  \\"data-tid\\": \\"95f380fa\\" + (props && props['data-tid-prop'] ? ' ' + props['data-tid-prop'] : '')
})));

RefComponent[\\"data-tid\\"] = \\"95f380fa\\";
var _default = RefComponent;
exports.default = _default;"
`;

exports[`babel plugin transform should transform source code depends on the env option 1`] = `
"/*__reselector__start__::{\\"Button\\":{\\"data-tid\\":\\"cc393c49\\"},\\"UnexportComponent\\":{\\"data-tid\\":\\"2cf9b58f\\"},\\"ClassComponent\\":{\\"data-tid\\":\\"9d16a7de\\"},\\"ArrowFunctionalComponent\\":{\\"data-tid\\":\\"7826a6\\"},\\"FunctionalComponent\\":{\\"data-tid\\":\\"1b1a9b1f\\"},\\"ComposedComponent\\":{\\"data-tid\\":\\"f909cc1c\\"},\\"ComponentWithAttrs\\":{\\"data-tid\\":\\"7cb847d2\\"},\\"ComponentNoDestructure\\":{\\"data-tid\\":\\"fd2b1305\\"},\\"ComposedComponent2\\":{\\"data-tid\\":\\"20ca140e\\"},\\"RenderFunction\\":{\\"data-tid\\":\\"fad6b557\\"},\\"SpreadPropsComponent\\":{\\"data-tid\\":\\"d2e56e0f\\"},\\"default\\":{\\"data-tid\\":\\"165372b4\\"}}::__reselector__end__*/
\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.FunctionalComponent = FunctionalComponent;
exports.default = exports.SpreadPropsComponent = exports.RenderFunction = exports.ComposedComponent2 = exports.ComponentNoDestructure = exports.ComponentWithAttrs = exports.ComposedComponent = exports.ArrowFunctionalComponent = exports.ClassComponent = exports.Button = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

const Button = props => _react.default.createElement('button', _extends({}, props, process.env.RESELECTOR === \\"true\\" ? {
  \\"data-tid\\": \\"cc393c49\\" + (props && props['data-tid-prop'] ? ' ' + props['data-tid-prop'] : '')
} : {}), props.children);
/* eslint-disable no-unused-vars */


exports.Button = Button;
Button[\\"data-tid\\"] = \\"cc393c49\\";

const UnexportComponent = ({
  children,
  'data-tid-prop': __dataprop__
}) => _react.default.createElement(\\"div\\", process.env.RESELECTOR === \\"true\\" ? {
  \\"data-tid\\": \\"2cf9b58f\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
} : {}, children);
/* eslint-enable no-unused-vars */


UnexportComponent[\\"data-tid\\"] = \\"2cf9b58f\\";

class ClassComponent extends _react.default.Component {
  render() {
    return _react.default.createElement(\\"div\\", process.env.RESELECTOR === \\"true\\" ? {
      \\"data-tid\\": \\"9d16a7de\\" + (this.props && this.props['data-tid-prop'] ? ' ' + this.props['data-tid-prop'] : '')
    } : {}, this.props.children);
  }

}

exports.ClassComponent = ClassComponent;
ClassComponent[\\"data-tid\\"] = \\"9d16a7de\\";

const ArrowFunctionalComponent = ({
  children,
  'data-tid-prop': __dataprop__
}) => _react.default.createElement(\\"div\\", process.env.RESELECTOR === \\"true\\" ? {
  \\"data-tid\\": \\"7826a6\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
} : {}, children);

exports.ArrowFunctionalComponent = ArrowFunctionalComponent;
ArrowFunctionalComponent[\\"data-tid\\"] = \\"7826a6\\";

function FunctionalComponent({
  children,
  'data-tid-prop': __dataprop__
}) {
  return _react.default.createElement(\\"p\\", process.env.RESELECTOR === \\"true\\" ? {
    \\"data-tid\\": \\"1b1a9b1f\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
  } : {}, children);
}

FunctionalComponent[\\"data-tid\\"] = \\"1b1a9b1f\\";

const ComposedComponent = ({
  children,
  'data-tid-prop': __dataprop__
}) => _react.default.createElement(Button, process.env.RESELECTOR === \\"true\\" ? {
  \\"data-tid\\": \\"f909cc1c\\" + (__dataprop__ ? ' ' + __dataprop__ : ''),
  \\"data-tid-prop\\": \\"f909cc1c\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
} : {}, children);

exports.ComposedComponent = ComposedComponent;
ComposedComponent[\\"data-tid\\"] = \\"f909cc1c\\";

const ComponentWithAttrs = ({
  children,
  'data-tid-prop': __dataprop__
}) => _react.default.createElement(\\"div\\", {
  \\"data-test\\": \\"testme\\",
  ...(process.env.RESELECTOR === \\"true\\" ? {
    \\"data-tid\\": \\"7cb847d2\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
  } : {})
}, children);

exports.ComponentWithAttrs = ComponentWithAttrs;
ComponentWithAttrs[\\"data-tid\\"] = \\"7cb847d2\\";

const ComponentNoDestructure = props => _react.default.createElement(\\"p\\", process.env.RESELECTOR === \\"true\\" ? {
  \\"data-tid\\": \\"fd2b1305\\" + (props && props['data-tid-prop'] ? ' ' + props['data-tid-prop'] : '')
} : {}, props.children);

exports.ComponentNoDestructure = ComponentNoDestructure;
ComponentNoDestructure[\\"data-tid\\"] = \\"fd2b1305\\";

const ComposedComponent2 = ({
  children,
  'data-tid-prop': __dataprop__
}) => _react.default.createElement(ComposedComponent, process.env.RESELECTOR === \\"true\\" ? {
  \\"data-tid\\": \\"20ca140e\\" + (__dataprop__ ? ' ' + __dataprop__ : ''),
  \\"data-tid-prop\\": \\"20ca140e\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
} : {}, _react.default.createElement(\\"div\\", null, children));
/**
 * Tests should not fail
 */


exports.ComposedComponent2 = ComposedComponent2;
ComposedComponent2[\\"data-tid\\"] = \\"20ca140e\\";

const RenderFunction = ([a, b]) => _react.default.createElement(\\"div\\", {
  \\"data-a\\": a,
  \\"data-b\\": b,
  ...(process.env.RESELECTOR === \\"true\\" ? {
    \\"data-tid\\": \\"fad6b557\\"
  } : {})
});

exports.RenderFunction = RenderFunction;
RenderFunction[\\"data-tid\\"] = \\"fad6b557\\";

const SpreadPropsComponent = ({
  children,
  ...props
}) => _react.default.createElement(\\"div\\", _extends({}, Object.assign({}, props, {
  \\"data-disabled\\": true
}), process.env.RESELECTOR === \\"true\\" ? {
  \\"data-tid\\": \\"d2e56e0f\\" + (props && props['data-tid-prop'] ? ' ' + props['data-tid-prop'] : '')
} : {}), children);

exports.SpreadPropsComponent = SpreadPropsComponent;
SpreadPropsComponent[\\"data-tid\\"] = \\"d2e56e0f\\";

var _default = ({
  children,
  'data-tid-prop': __dataprop__
}) => _react.default.createElement(\\"div\\", process.env.RESELECTOR === \\"true\\" ? {
  \\"data-tid\\": \\"165372b4\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
} : {}, children);

exports.default = _default;

if (module.exports) {
  module.exports.default[\\"data-tid\\"] = \\"165372b4\\";
}"
`;

exports[`babel plugin transform should transform source code well for development 1`] = `
"/*__reselector__start__::{\\"Button\\":{\\"data-tid\\":\\"cc393c49\\"},\\"UnexportComponent\\":{\\"data-tid\\":\\"2cf9b58f\\"},\\"ClassComponent\\":{\\"data-tid\\":\\"9d16a7de\\"},\\"ArrowFunctionalComponent\\":{\\"data-tid\\":\\"7826a6\\"},\\"FunctionalComponent\\":{\\"data-tid\\":\\"1b1a9b1f\\"},\\"ComposedComponent\\":{\\"data-tid\\":\\"f909cc1c\\"},\\"ComponentWithAttrs\\":{\\"data-tid\\":\\"7cb847d2\\"},\\"ComponentNoDestructure\\":{\\"data-tid\\":\\"fd2b1305\\"},\\"ComposedComponent2\\":{\\"data-tid\\":\\"20ca140e\\"},\\"RenderFunction\\":{\\"data-tid\\":\\"fad6b557\\"},\\"SpreadPropsComponent\\":{\\"data-tid\\":\\"d2e56e0f\\"},\\"default\\":{\\"data-tid\\":\\"165372b4\\"}}::__reselector__end__*/
\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.FunctionalComponent = FunctionalComponent;
exports.default = exports.SpreadPropsComponent = exports.RenderFunction = exports.ComposedComponent2 = exports.ComponentNoDestructure = exports.ComponentWithAttrs = exports.ComposedComponent = exports.ArrowFunctionalComponent = exports.ClassComponent = exports.Button = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

const Button = props => _react.default.createElement('button', _extends({}, props, {
  \\"data-tid\\": \\"cc393c49\\" + (props && props['data-tid-prop'] ? ' ' + props['data-tid-prop'] : '')
}), props.children);
/* eslint-disable no-unused-vars */


exports.Button = Button;
Button[\\"data-tid\\"] = \\"cc393c49\\";

const UnexportComponent = ({
  children,
  'data-tid-prop': __dataprop__
}) => _react.default.createElement(\\"div\\", {
  \\"data-tid\\": \\"2cf9b58f\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children);
/* eslint-enable no-unused-vars */


UnexportComponent[\\"data-tid\\"] = \\"2cf9b58f\\";

class ClassComponent extends _react.default.Component {
  render() {
    return _react.default.createElement(\\"div\\", {
      \\"data-tid\\": \\"9d16a7de\\" + (this.props && this.props['data-tid-prop'] ? ' ' + this.props['data-tid-prop'] : '')
    }, this.props.children);
  }

}

exports.ClassComponent = ClassComponent;
ClassComponent[\\"data-tid\\"] = \\"9d16a7de\\";

const ArrowFunctionalComponent = ({
  children,
  'data-tid-prop': __dataprop__
}) => _react.default.createElement(\\"div\\", {
  \\"data-tid\\": \\"7826a6\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children);

exports.ArrowFunctionalComponent = ArrowFunctionalComponent;
ArrowFunctionalComponent[\\"data-tid\\"] = \\"7826a6\\";

function FunctionalComponent({
  children,
  'data-tid-prop': __dataprop__
}) {
  return _react.default.createElement(\\"p\\", {
    \\"data-tid\\": \\"1b1a9b1f\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
  }, children);
}

FunctionalComponent[\\"data-tid\\"] = \\"1b1a9b1f\\";

const ComposedComponent = ({
  children,
  'data-tid-prop': __dataprop__
}) => _react.default.createElement(Button, {
  \\"data-tid\\": \\"f909cc1c\\" + (__dataprop__ ? ' ' + __dataprop__ : ''),
  \\"data-tid-prop\\": \\"f909cc1c\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children);

exports.ComposedComponent = ComposedComponent;
ComposedComponent[\\"data-tid\\"] = \\"f909cc1c\\";

const ComponentWithAttrs = ({
  children,
  'data-tid-prop': __dataprop__
}) => _react.default.createElement(\\"div\\", {
  \\"data-test\\": \\"testme\\",
  \\"data-tid\\": \\"7cb847d2\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children);

exports.ComponentWithAttrs = ComponentWithAttrs;
ComponentWithAttrs[\\"data-tid\\"] = \\"7cb847d2\\";

const ComponentNoDestructure = props => _react.default.createElement(\\"p\\", {
  \\"data-tid\\": \\"fd2b1305\\" + (props && props['data-tid-prop'] ? ' ' + props['data-tid-prop'] : '')
}, props.children);

exports.ComponentNoDestructure = ComponentNoDestructure;
ComponentNoDestructure[\\"data-tid\\"] = \\"fd2b1305\\";

const ComposedComponent2 = ({
  children,
  'data-tid-prop': __dataprop__
}) => _react.default.createElement(ComposedComponent, {
  \\"data-tid\\": \\"20ca140e\\" + (__dataprop__ ? ' ' + __dataprop__ : ''),
  \\"data-tid-prop\\": \\"20ca140e\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, _react.default.createElement(\\"div\\", null, children));
/**
 * Tests should not fail
 */


exports.ComposedComponent2 = ComposedComponent2;
ComposedComponent2[\\"data-tid\\"] = \\"20ca140e\\";

const RenderFunction = ([a, b]) => _react.default.createElement(\\"div\\", {
  \\"data-a\\": a,
  \\"data-b\\": b,
  \\"data-tid\\": \\"fad6b557\\"
});

exports.RenderFunction = RenderFunction;
RenderFunction[\\"data-tid\\"] = \\"fad6b557\\";

const SpreadPropsComponent = ({
  children,
  ...props
}) => _react.default.createElement(\\"div\\", _extends({}, Object.assign({}, props, {
  \\"data-disabled\\": true
}), {
  \\"data-tid\\": \\"d2e56e0f\\" + (props && props['data-tid-prop'] ? ' ' + props['data-tid-prop'] : '')
}), children);

exports.SpreadPropsComponent = SpreadPropsComponent;
SpreadPropsComponent[\\"data-tid\\"] = \\"d2e56e0f\\";

var _default = ({
  children,
  'data-tid-prop': __dataprop__
}) => _react.default.createElement(\\"div\\", {
  \\"data-tid\\": \\"165372b4\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children);

exports.default = _default;

if (module.exports) {
  module.exports.default[\\"data-tid\\"] = \\"165372b4\\";
}"
`;
